--- a/main/index.html
+++ b/main/index.html
@@ -17,7 +17,7 @@
 <script type="importmap">
   {
    "imports": {
-    "three": "../../Assets/scripts/three.js/build/three.module.js"
+    "three": "../Assets/scripts/three.js/build/three.module.js"
    }
   }
  </script>
