--- a/main/index.html
+++ b/main/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="../../Assets/icons/icon.png">
-    <link rel="stylesheet" type="text/css" href="../../Assets/css/CG-Classes.css">
+    <link rel="icon" type="image/x-icon" href="../Assets/icons/icon.png">
+    <link rel="stylesheet" type="text/css" href="../Assets/css/CG-Classes.css">
 </head>
 
 <!-- Import maps polyfill -->
